[gd_scene load_steps=21 format=2]

[ext_resource path="res://textures/2floor/ben's_room.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main_character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/2floor/ben_room.gd" type="Script" id=3]
[ext_resource path="res://textures/furniture/blueprint-2_03.png" type="Texture" id=4]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=5]
[ext_resource path="res://textures/characters/John/john_left_1.png" type="Texture" id=6]
[ext_resource path="res://textures/characters/John/john_front_1.png" type="Texture" id=7]
[ext_resource path="res://textures/characters/John/john_back_1.png" type="Texture" id=8]
[ext_resource path="res://textures/characters/John/john_right_1.png" type="Texture" id=9]
[ext_resource path="res://textures/characters/John/john_front_2.png" type="Texture" id=10]
[ext_resource path="res://textures/characters/John/john_right_3.png" type="Texture" id=11]
[ext_resource path="res://textures/characters/John/john_front_3.png" type="Texture" id=12]
[ext_resource path="res://textures/characters/John/john_right_2.png" type="Texture" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.4307, 34.4855 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.15253, 20.2429 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.22031, 12.8146 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "placeholder",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "exit_room"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("John_cutscene:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "walk_down", "walk_right", "walk_right", "idle_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("John_cutscene:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 274, 125 ), Vector2( 274, 157 ), Vector2( 430, 157 ) ]
}

[node name="ben_room" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -858.428
margin_top = -677.851
margin_right = 1761.57
margin_bottom = 952.149
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 333.145, 196.969 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/StaticBody2D"]
polygon = PoolVector2Array( -105.966, -95.5764, 99.9346, -95.5764, 99.9613, -45.5933, 105.983, -45.5667, 106.009, -19.616, 100.121, -19.4561, 100.015, 134.463, -105.992, 134.41, -107.705, -90.77, -164.998, 140.312, 129.88, 141.254, 113.393, -121.122, -102.48, -104.524 )

[node name="bed" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 248.799, 126.32 )
texture = ExtResource( 4 )
region_rect = Rect2( -6, 22, 58, 52 )

[node name="StaticBody2D" type="StaticBody2D" parent="bed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed/StaticBody2D"]
position = Vector2( -0.229736, 5.74298 )
shape = SubResource( 3 )

[node name="bed_speak" type="Area2D" parent="bed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed/bed_speak"]
position = Vector2( 29.3355, 6.14401 )
shape = SubResource( 4 )

[node name="hall" type="Area2D" parent="."]
position = Vector2( 423.047, 165.922 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hall"]
position = Vector2( 12.2819, -1.51297 )
shape = SubResource( 5 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 348, 123 )

[node name="John_cutscene" type="AnimatedSprite" parent="."]
position = Vector2( 398.8, 157 )
frames = SubResource( 6 )
animation = "walk_right"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="John_cutscene"]
zoom = Vector2( 0.3, 0.3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/exit_room = SubResource( 7 )
[connection signal="body_entered" from="bed/bed_speak" to="." method="_on_bed_speak_body_entered"]
[connection signal="body_exited" from="bed/bed_speak" to="." method="_on_bed_speak_body_exited"]
[connection signal="body_entered" from="hall" to="." method="_on_hall_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
